Fixed single selection to only work when points are visible.

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ path.domain {
 	shape-rendering: crispEdges;
 }
 #details {
-	float: left;
+	/*float: left;*/
 	margin-left: 300px;
 	margin-top: -200px;
 	
